force-app/main/default/objects/Conga_batch_setting__c/fields/Business_Unit_Law_Firm_Report__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Law_Firm_Report__c</fullName>
    <label>Business Unit Law Firm Report</label>
    <length>225</length>
    <type>Text</type>
</CustomField>