force-app/main/default/objects/Conga_batch_setting__c/fields/End_Date_Law_Firm_Report__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Law_Firm_Report__c</fullName>
    <label>End Date Law Firm Report</label>
    <type>Date</type>
</CustomField>