force-app/main/default/objects/Conga_batch_setting__c/fields/Lawyer_Count_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Count_Business_Unit__c</fullName>
    <label>Lawyer Count Business Unit</label>
    <length>225</length>
    <type>Text</type>
</CustomField>