force-app/main/default/objects/Conga_batch_setting__c/fields/Lawyer_Count_Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Count_Payout_Date__c</fullName>
    <label>Lawyer Count Payout Date</label>
    <type>Date</type>
</CustomField>