force-app/main/default/objects/Conga_batch_setting__c/fields/Lawyer_Count_Type_Of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Count_Type_Of_Loan__c</fullName>
    <label>Lawyer Count Type Of Loan</label>
    <length>225</length>
    <type>Text</type>
</CustomField>