force-app/main/default/objects/Conga_batch_setting__c/fields/Query_Selector_Lawyer_Count_Report__c.field-meta.xml
<CustomField>
    <fullName>Query_Selector_Lawyer_Count_Report__c</fullName>
    <label>Query Selector Lawyer Count Report</label>
    <length>225</length>
    <type>Text</type>
</CustomField>