force-app/main/default/objects/Conga_batch_setting__c/fields/Start_Date_Law_Firm_Report__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Law_Firm_Report__c</fullName>
    <label>Start Date Law Firm Report</label>
    <type>Date</type>
</CustomField>