force-app/main/default/objects/Conga_batch_setting__c/fields/Type_of_Loan_Law_Firm_Report__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Loan_Law_Firm_Report__c</fullName>
    <label>Type of Loan Law Firm Report</label>
    <length>225</length>
    <type>Text</type>
</CustomField>