force-app/main/default/objects/Conga_batch_setting__c/fields/Type_of_Loan_Lawyer_Summary__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Loan_Lawyer_Summary__c</fullName>
    <label>Type of Loan Lawyer Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>